# GLaDOS_Arm

./: .gitattributes  .gitignore  CALIBRATION.md  README.md  requirements.txt
brain_runtime/: README.md  pyproject.toml
brain_runtime/src/brain_runtime/: __init__.py  __main__.py  client.py  pipeline.py
configs/: brain.env.example  pi_potato.yaml  pi_potato_laptop.yaml  pi_potato_system_prompt.txt
docs/: AUDIO_PC_POTATO.md  LAPTOP_BRAIN_SETUP.md  MERGE_PREP_GLADOS_ARM_CONTEXT.md  MOTION_TUNING.md  SPLIT_BRAIN_ARCHITECTURE.md  VOICE_LOOP_PI_PC.md  VOICE_MIC_PI_PC.md
firmware/GLaDOS_Arm/: GLaDOS_Arm.ino
firmware/R4_Direct_Servo_90_Test/: R4_Direct_Servo_90_Test.ino
firmware/R4_Servo_90_Test/: R4_Servo_90_Test.ino
firmware/Servo_Channel_Probe/: Servo_Channel_Probe.ino
glados_arm/: __init__.py  config.py  controller.py  face_tracking.py  kinematics.py  main.py  mapping.py  motion_config_v1.py  motion_controller_v1.py  motion_smooth.py  robot_model.py  serial_comm.py  vision_config.py
personality_core/: .gitignore  Dockerfile  README.md  UPSTREAM.txt  demo.ipynb  pyproject.toml  run_brain_runtime.ps1  run_glados_audio_pc.ps1
personality_core/.github/: FUNDING.yml
personality_core/configs/: assistant_config.yaml  (+2 more)
pi_runtime/: README.md  pyproject.toml
pi_runtime/src/pi_runtime/: __init__.py  __main__.py  audio_play.py  executor.py  mic_record.py  mic_stream_vad.py  safety.py  server.py
robot_link/: README.md  pyproject.toml
scripts/: brain_env.ps1  brain_env.sh  install_onnx_runtime_gpu.ps1  install_personality_pi.sh  pi_env.sh  pi_list_audio_devices.sh  pi_setup_mic_stream.sh  run_brain_runtime.ps1  run_glados_audio_pc.ps1  run_glados_audio_pc.sh  setup_ollama_pi.sh  smoke_test_personality.sh  start_arm_and_glados.sh
tests/: test_fk_ik.py  test_motion_v1.py
(+67 files in other folders)
