[project]
name = "brain-runtime"
version = "0.1.0"
description = "Laptop-side WebSocket client to Pi; future: GLaDOS / LLM / TTS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "websockets>=12.0",
  "robot-link",
]

[project.scripts]
brain-runtime = "brain_runtime.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
