[project]
name = "pi-runtime"
version = "0.1.0"
description = "Lightweight WebSocket bridge on Raspberry Pi: hardware, safety, heartbeat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "websockets>=12.0",
  "robot-link",
]

[project.scripts]
pi-runtime = "pi_runtime.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
