[project]
name = "pi-runtime"
version = "0.1.0"
description = "Lightweight WebSocket bridge on Raspberry Pi: hardware, safety, heartbeat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "websockets>=12.0",
  "robot-link",
  "numpy>=1.22",
  "sounddevice>=0.5.1",
]

[project.scripts]
pi-runtime = "pi_runtime.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
